Improve testing